--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
-  "functions": {
-    "index.php": {
-      "runtime": "vercel-php@0.5.1"
-    }
-  },
+  "version": 2,
+  "builds": [
+    { "src": "index.php", "use": "@vercel/php" },
+    { "src": "*.php", "use": "@vercel/php" },
+    { "src": "includes/**/*.php", "use": "@vercel/php" },
+    { "src": "config/**/*.php", "use": "@vercel/php" }
+  ],
   "routes": [
     { "src": "/(.*)", "dest": "/index.php" }
   ]
